<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:background="@drawable/back_dialog"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_849810_cross_multimedia_error_delite_icon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_task"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_close"
        app:layout_constraintTop_toBottomOf="@+id/img_close" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_title"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_edt_dialog"
        android:gravity="start"
        android:hint="@string/enter_task"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <hwsein.developer.example.taskapplication.CustomView.CustomButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edt_title"
        app:layout_constraintTop_toBottomOf="@+id/edt_title"
        app:text="ثبت وظیفه" />

    <hwsein.developer.example.taskapplication.CustomView.CustomButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/back_btn_second"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_task"
        app:layout_constraintStart_toEndOf="@+id/btn_add_task"
        app:layout_constraintTop_toTopOf="@+id/btn_add_task"
        app:layout_constraintVertical_bias="1.0"
        app:text="انصراف" />


</androidx.constraintlayout.widget.ConstraintLayout>